--- a/tattoo-shop/index.html
+++ b/tattoo-shop/index.html
@@ -1,4 +1,19 @@
-<header class="header">
+<!DOCTYPE html>
+<html lang="ru">
+  <head>
+  <title>Home</title>
+  <meta charset="UTF-8" />
+  <meta name="format-detection" content="telephone=no" />
+  <link rel="stylesheet" href="css/style.min.css" />
+  <link rel="shortcut icon" href="favicon.ico" />
+  <!-- <meta name="robots" content="noindex, nofollow"> -->
+  <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0"> -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+</head>
+
+  <body>
+    <div class="wrapper">
+      <header class="header">
   <div class="header__inner">
     <div class="header__top">
       <div class="header__contacts contacts">
@@ -466,3 +481,34 @@
     </div> -->
   </div>
 </header>
+
+      <main class="page"></main>
+      <footer class="footer"></footer>
+
+    </div>
+    <div class="popup popup_popup">
+	<div class="popup__content">
+		<div class="popup__body">
+			<div class="popup__close"></div>
+		</div>
+	</div>
+</div>
+<div class="popup popup_massagename-message">
+	<div class="popup__content">
+		<div class="popup__body">
+			<div class="popup__close"></div>
+		</div>
+	</div>
+</div>
+<div class="popup popup_video">
+	<div class="popup__content">
+		<div class="popup__body">
+			<div class="popup__close popup__close_video"></div>
+			<div class="popup__video _video"></div>
+		</div>
+	</div>
+</div>
+ <script src="js/app.min.js"></script>
+
+  </body>
+</html>
