filter desktop is done, inputs modified

--- a/tattoo-shop/index.html
+++ b/tattoo-shop/index.html
@@ -1491,9 +1491,10 @@
                       value="1"
                       required=""
                     />
-                    <p class="checkbox__text">
+                    <span class="checkbox__box"></span>
+                    <span class="checkbox__text">
                       Вы соглашаетесь на обработку ваших персональных данных
-                    </p>
+                    </span>
                   </label>
                 </div>
                 <button class="button button--orange" type="submit">
