--- a/#src/index.html
+++ b/#src/index.html
@@ -1024,9 +1024,10 @@
                       value="1"
                       required=""
                     />
-                    <p class="checkbox__text">
+                    <span class="checkbox__box"></span>
+                    <span class="checkbox__text">
                       Вы соглашаетесь на обработку ваших персональных данных
-                    </p>
+                    </span>
                   </label>
                 </div>
                 <button class="button button--orange" type="submit">
