change title in head on 404 page

--- a/#src/404.html
+++ b/#src/404.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="ru">
-  @@include('_head.html',{ "title":"Product" })
+  @@include('_head.html',{ "title":"404" })
   <body>
     <div class="wrapper">
       @@include('_header.html',{})
