modified header: rename class, create bem block

--- a/#src/_header.html
+++ b/#src/_header.html
@@ -66,26 +66,26 @@
           <a class="search__extended-search-link"></a>
         </div>
       </form>
-      <div class="header__cart cart">
-        <div class="cart__item cart__item--mobile">
-          <a href="#" class="cart__link">
-            <span class="cart__price">
+      <div class="header__nav-bar nav-bar">
+        <div class="nav-bar__item nav-bar__item--mobile">
+          <a href="#" class="nav-bar__link">
+            <span class="nav-bar__price">
               37 280
               <span>₽</span>
             </span>
-            <div class="cart__icon cart__icon--basket cart__icon--has-notify">
-              <span class="cart__notify">17</span>
+            <div class="nav-bar__icon nav-bar__icon--basket nav-bar__icon--has-notify">
+              <span class="nav-bar__notify">17</span>
             </div>
           </a>
         </div>
-        <div class="cart__item">
-          <a href="#" class="cart__link">
-            <div class="cart__icon cart__icon--favorite"></div>
+        <div class="nav-bar__item">
+          <a href="#" class="nav-bar__link">
+            <div class="nav-bar__icon nav-bar__icon--favorite"></div>
           </a>
         </div>
-        <div class="cart__item">
-          <a href="#" class="cart__link">
-            <div class="cart__icon cart__icon--login"></div>
+        <div class="nav-bar__item">
+          <a href="#" class="nav-bar__link">
+            <div class="nav-bar__icon nav-bar__icon--login"></div>
           </a>
         </div>
       </div>
