--- a/#src/product.html
+++ b/#src/product.html
@@ -427,22 +427,6 @@
                               <span class="button__corner button__corner--left"></span>
                               <span class="button__corner button__corner--right"></span>
                             </button>
-                            <div class="product-card__counter counter-card">
-                              <button
-                                class="counter-card__button counter-card__button--decr"
-                              ></button>
-                              <div class="counter-card__content">
-                                <span class="counter-card__count">
-                                  15
-                                  <span>шт</span>
-                                </span>
-                                <span class="counter-card__text">В корзине</span>
-                              </div>
-                              <button
-                                tabindex="0"
-                                class="counter-card__button counter-card__button--incr"
-                              ></button>
-                            </div>
                           </div>
                         </div>
                       </div>
@@ -565,22 +549,6 @@
                               <span class="button__corner button__corner--left"></span>
                               <span class="button__corner button__corner--right"></span>
                             </button>
-                            <div class="product-card__counter counter-card">
-                              <button
-                                class="counter-card__button counter-card__button--decr"
-                              ></button>
-                              <div class="counter-card__content">
-                                <span class="counter-card__count">
-                                  15
-                                  <span>шт</span>
-                                </span>
-                                <span class="counter-card__text">В корзине</span>
-                              </div>
-                              <button
-                                tabindex="0"
-                                class="counter-card__button counter-card__button--incr"
-                              ></button>
-                            </div>
                           </div>
                         </div>
                       </div>
@@ -703,22 +671,6 @@
                               <span class="button__corner button__corner--left"></span>
                               <span class="button__corner button__corner--right"></span>
                             </button>
-                            <div class="product-card__counter counter-card">
-                              <button
-                                class="counter-card__button counter-card__button--decr"
-                              ></button>
-                              <div class="counter-card__content">
-                                <span class="counter-card__count">
-                                  15
-                                  <span>шт</span>
-                                </span>
-                                <span class="counter-card__text">В корзине</span>
-                              </div>
-                              <button
-                                tabindex="0"
-                                class="counter-card__button counter-card__button--incr"
-                              ></button>
-                            </div>
                           </div>
                         </div>
                       </div>
@@ -841,22 +793,6 @@
                               <span class="button__corner button__corner--left"></span>
                               <span class="button__corner button__corner--right"></span>
                             </button>
-                            <div class="product-card__counter counter-card">
-                              <button
-                                class="counter-card__button counter-card__button--decr"
-                              ></button>
-                              <div class="counter-card__content">
-                                <span class="counter-card__count">
-                                  15
-                                  <span>шт</span>
-                                </span>
-                                <span class="counter-card__text">В корзине</span>
-                              </div>
-                              <button
-                                tabindex="0"
-                                class="counter-card__button counter-card__button--incr"
-                              ></button>
-                            </div>
                           </div>
                         </div>
                       </div>
@@ -979,22 +915,6 @@
                               <span class="button__corner button__corner--left"></span>
                               <span class="button__corner button__corner--right"></span>
                             </button>
-                            <div class="product-card__counter counter-card">
-                              <button
-                                class="counter-card__button counter-card__button--decr"
-                              ></button>
-                              <div class="counter-card__content">
-                                <span class="counter-card__count">
-                                  15
-                                  <span>шт</span>
-                                </span>
-                                <span class="counter-card__text">В корзине</span>
-                              </div>
-                              <button
-                                tabindex="0"
-                                class="counter-card__button counter-card__button--incr"
-                              ></button>
-                            </div>
                           </div>
                         </div>
                       </div>
@@ -1117,22 +1037,6 @@
                               <span class="button__corner button__corner--left"></span>
                               <span class="button__corner button__corner--right"></span>
                             </button>
-                            <div class="product-card__counter counter-card">
-                              <button
-                                class="counter-card__button counter-card__button--decr"
-                              ></button>
-                              <div class="counter-card__content">
-                                <span class="counter-card__count">
-                                  15
-                                  <span>шт</span>
-                                </span>
-                                <span class="counter-card__text">В корзине</span>
-                              </div>
-                              <button
-                                tabindex="0"
-                                class="counter-card__button counter-card__button--incr"
-                              ></button>
-                            </div>
                           </div>
                         </div>
                       </div>
@@ -1255,22 +1159,6 @@
                               <span class="button__corner button__corner--left"></span>
                               <span class="button__corner button__corner--right"></span>
                             </button>
-                            <div class="product-card__counter counter-card">
-                              <button
-                                class="counter-card__button counter-card__button--decr"
-                              ></button>
-                              <div class="counter-card__content">
-                                <span class="counter-card__count">
-                                  15
-                                  <span>шт</span>
-                                </span>
-                                <span class="counter-card__text">В корзине</span>
-                              </div>
-                              <button
-                                tabindex="0"
-                                class="counter-card__button counter-card__button--incr"
-                              ></button>
-                            </div>
                           </div>
                         </div>
                       </div>
@@ -1393,22 +1281,6 @@
                               <span class="button__corner button__corner--left"></span>
                               <span class="button__corner button__corner--right"></span>
                             </button>
-                            <div class="product-card__counter counter-card">
-                              <button
-                                class="counter-card__button counter-card__button--decr"
-                              ></button>
-                              <div class="counter-card__content">
-                                <span class="counter-card__count">
-                                  15
-                                  <span>шт</span>
-                                </span>
-                                <span class="counter-card__text">В корзине</span>
-                              </div>
-                              <button
-                                tabindex="0"
-                                class="counter-card__button counter-card__button--incr"
-                              ></button>
-                            </div>
                           </div>
                         </div>
                       </div>
@@ -1546,22 +1418,7 @@
                               <span class="button__corner button__corner--left"></span>
                               <span class="button__corner button__corner--right"></span>
                             </button>
-                            <div class="product-card__counter counter-card">
-                              <button
-                                class="counter-card__button counter-card__button--decr"
-                              ></button>
-                              <div class="counter-card__content">
-                                <span class="counter-card__count">
-                                  15
-                                  <span>шт</span>
-                                </span>
-                                <span class="counter-card__text">В корзине</span>
-                              </div>
-                              <button
-                                tabindex="0"
-                                class="counter-card__button counter-card__button--incr"
-                              ></button>
-                            </div>
+                            nav-bar
                           </div>
                         </div>
                       </div>
@@ -1684,22 +1541,6 @@
                               <span class="button__corner button__corner--left"></span>
                               <span class="button__corner button__corner--right"></span>
                             </button>
-                            <div class="product-card__counter counter-card">
-                              <button
-                                class="counter-card__button counter-card__button--decr"
-                              ></button>
-                              <div class="counter-card__content">
-                                <span class="counter-card__count">
-                                  15
-                                  <span>шт</span>
-                                </span>
-                                <span class="counter-card__text">В корзине</span>
-                              </div>
-                              <button
-                                tabindex="0"
-                                class="counter-card__button counter-card__button--incr"
-                              ></button>
-                            </div>
                           </div>
                         </div>
                       </div>
@@ -1822,22 +1663,6 @@
                               <span class="button__corner button__corner--left"></span>
                               <span class="button__corner button__corner--right"></span>
                             </button>
-                            <div class="product-card__counter counter-card">
-                              <button
-                                class="counter-card__button counter-card__button--decr"
-                              ></button>
-                              <div class="counter-card__content">
-                                <span class="counter-card__count">
-                                  15
-                                  <span>шт</span>
-                                </span>
-                                <span class="counter-card__text">В корзине</span>
-                              </div>
-                              <button
-                                tabindex="0"
-                                class="counter-card__button counter-card__button--incr"
-                              ></button>
-                            </div>
                           </div>
                         </div>
                       </div>
@@ -1960,22 +1785,6 @@
                               <span class="button__corner button__corner--left"></span>
                               <span class="button__corner button__corner--right"></span>
                             </button>
-                            <div class="product-card__counter counter-card">
-                              <button
-                                class="counter-card__button counter-card__button--decr"
-                              ></button>
-                              <div class="counter-card__content">
-                                <span class="counter-card__count">
-                                  15
-                                  <span>шт</span>
-                                </span>
-                                <span class="counter-card__text">В корзине</span>
-                              </div>
-                              <button
-                                tabindex="0"
-                                class="counter-card__button counter-card__button--incr"
-                              ></button>
-                            </div>
                           </div>
                         </div>
                       </div>
@@ -2098,22 +1907,6 @@
                               <span class="button__corner button__corner--left"></span>
                               <span class="button__corner button__corner--right"></span>
                             </button>
-                            <div class="product-card__counter counter-card">
-                              <button
-                                class="counter-card__button counter-card__button--decr"
-                              ></button>
-                              <div class="counter-card__content">
-                                <span class="counter-card__count">
-                                  15
-                                  <span>шт</span>
-                                </span>
-                                <span class="counter-card__text">В корзине</span>
-                              </div>
-                              <button
-                                tabindex="0"
-                                class="counter-card__button counter-card__button--incr"
-                              ></button>
-                            </div>
                           </div>
                         </div>
                       </div>
@@ -2236,22 +2029,6 @@
                               <span class="button__corner button__corner--left"></span>
                               <span class="button__corner button__corner--right"></span>
                             </button>
-                            <div class="product-card__counter counter-card">
-                              <button
-                                class="counter-card__button counter-card__button--decr"
-                              ></button>
-                              <div class="counter-card__content">
-                                <span class="counter-card__count">
-                                  15
-                                  <span>шт</span>
-                                </span>
-                                <span class="counter-card__text">В корзине</span>
-                              </div>
-                              <button
-                                tabindex="0"
-                                class="counter-card__button counter-card__button--incr"
-                              ></button>
-                            </div>
                           </div>
                         </div>
                       </div>
@@ -2374,22 +2151,6 @@
                               <span class="button__corner button__corner--left"></span>
                               <span class="button__corner button__corner--right"></span>
                             </button>
-                            <div class="product-card__counter counter-card">
-                              <button
-                                class="counter-card__button counter-card__button--decr"
-                              ></button>
-                              <div class="counter-card__content">
-                                <span class="counter-card__count">
-                                  15
-                                  <span>шт</span>
-                                </span>
-                                <span class="counter-card__text">В корзине</span>
-                              </div>
-                              <button
-                                tabindex="0"
-                                class="counter-card__button counter-card__button--incr"
-                              ></button>
-                            </div>
                           </div>
                         </div>
                       </div>
@@ -2512,22 +2273,6 @@
                               <span class="button__corner button__corner--left"></span>
                               <span class="button__corner button__corner--right"></span>
                             </button>
-                            <div class="product-card__counter counter-card">
-                              <button
-                                class="counter-card__button counter-card__button--decr"
-                              ></button>
-                              <div class="counter-card__content">
-                                <span class="counter-card__count">
-                                  15
-                                  <span>шт</span>
-                                </span>
-                                <span class="counter-card__text">В корзине</span>
-                              </div>
-                              <button
-                                tabindex="0"
-                                class="counter-card__button counter-card__button--incr"
-                              ></button>
-                            </div>
                           </div>
                         </div>
                       </div>
