--- a/#src/catalog.html
+++ b/#src/catalog.html
@@ -110,13 +110,7 @@
                   <div class="group-filter__top">
                     <h5 class="group-filter__heading">Гарантия</h5>
                     <label class="group-filter__label switch">
-                      <input
-                        class="group-filter__input"
-                        name="garanty"
-                        type="checkbox"
-                        value="1"
-                        required=""
-                      />
+                      <input class="switch__input" type="checkbox" required="" />
                       <span class="switch__slider"></span>
                     </label>
                   </div>
@@ -145,7 +139,7 @@
                             class="group-filter__input checkbox__input"
                             name="colors"
                             type="checkbox"
-                            value="1"
+                            value="2"
                             required=""
                           />
                           <span class="checkbox__box"></span>
@@ -155,7 +149,7 @@
                             class="group-filter__input checkbox__input"
                             name="colors"
                             type="checkbox"
-                            value="2"
+                            value="3"
                             required=""
                           />
                           <span class="checkbox__box"></span>
@@ -165,7 +159,7 @@
                             class="group-filter__input checkbox__input"
                             name="colors"
                             type="checkbox"
-                            value="3"
+                            value="4"
                             required=""
                           />
                           <span class="checkbox__box"></span>
@@ -175,7 +169,7 @@
                             class="group-filter__input checkbox__input"
                             name="colors"
                             type="checkbox"
-                            value="2"
+                            value="5"
                             required=""
                           />
                           <span class="checkbox__box"></span>
@@ -185,7 +179,7 @@
                             class="group-filter__input checkbox__input"
                             name="colors"
                             type="checkbox"
-                            value="2"
+                            value="6"
                             required=""
                           />
                           <span class="checkbox__box"></span>
