--- a/#src/_footer.html
+++ b/#src/_footer.html
@@ -1,18 +1,11 @@
 <footer class="footer">
   <div class="footer__inner">
     <div class="footer__group footer__group--main footer__group--separator">
-      <div class="footer__col">
-        <div class="footer__logo logo">
-          <div class="logo__img">
-            <a href="#" class="logo__link">
-              <img src="img/icons/logo.svg" alt="Логотип" />
-            </a>
-          </div>
+      <a class="footer__logo logo" href="/">
+        <div class="logo__img">
+          <img src="img/icons/logo.svg" alt="Логотип" />
         </div>
-        <div class="footer__privacy privacy">
-          <a href="#" class="privacy__link">Политика конфиденциальности</a>
-        </div>
-      </div>
+      </a>
       <div class="footer__nav page-nav">
         <ul class="page-nav__list">
           <li class="page-nav__item">
@@ -59,7 +52,7 @@
           </div>
         </div>
         <div class="contacts__item contacts__item--work-schedule">
-          <span class="contacts__text contacts__text">Время работы: с 9:00 до 20:00 по мск</span>
+          <span class="contacts__text">Время работы: с 9:00 до 20:00 по мск</span>
         </div>
         <div class="contacts__item">
           <a href="mailto:mr.driskell@mail.ru?subject=вопрос" class="contacts__link">
@@ -68,6 +61,15 @@
           </a>
         </div>
       </div>
+    </div>
+    <div class="footer__bottom">
+      <span class="footer__bottom-links">
+        <a href="#">Политика конфиденциальности</a>
+        <a href="#">Правила и условия</a>
+        <a href="#">Лицензия</a>
+        <a href="#">Публичная оферта</a>
+      </span>
+      <span class="footer__copyright">© ООО «Mr.Driskell», 2013-2022</span>
     </div>
   </div>
 </footer>
