--- a/#src/_header.html
+++ b/#src/_header.html
@@ -40,13 +40,11 @@
           <span></span>
         </span>
       </button>
-      <div class="header__logo logo">
+      <a class="header__logo logo" href="/">
         <div class="logo__img">
-          <a href="#" class="logo__link">
-            <img src="img/icons/logo.svg" alt="Логотип" />
-          </a>
+          <img src="img/icons/logo.svg" alt="Логотип" />
         </div>
-      </div>
+      </a>
       <div class="header__search-trigger">
         <button class="search-button"></button>
       </div>
