--- a/#src/_footer.html
+++ b/#src/_footer.html
@@ -1,32 +1,104 @@
 <footer class="footer">
-  <div class="footer__inner">
-    <div class="footer__group footer__group--main footer__group--separator">
+  <div class="footer__content">
+    <div class="footer__content-inner">
       <a class="footer__logo logo" href="/">
         <div class="logo__img">
           <img src="img/icons/logo.svg" alt="Логотип" />
         </div>
       </a>
-      <div class="footer__nav page-nav">
-        <ul class="page-nav__list">
-          <li class="page-nav__item">
-            <a href="#" class="page-nav__link">Промокоды</a>
+      <div class="footer__nav footer-nav">
+        <ul class="footer-nav__list">
+          <li class="footer-nav__item">
+            <h3 class="footer-nav__heading">
+              <a href="#" class="footer-nav__link">О нас</a>
+            </h3>
+            <ul class="footer-nav__sublist">
+              <li class="footer-nav__sublist-item">
+                <a href="#">Корпоративная ответственность</a>
+              </li>
+              <li class="footer-nav__sublist-item">
+                <a href="#">Вакансии</a>
+              </li>
+              <li class="footer-nav__sublist-item">
+                <a href="#">Инвесторам</a>
+              </li>
+            </ul>
           </li>
-          <li class="page-nav__item">
-            <a href="#" class="page-nav__link">Скидки</a>
+          <li class="footer-nav__item">
+            <h3 class="footer-nav__heading">
+              <a href="#" class="footer-nav__link">Помощь и информация</a>
+            </h3>
+            <ul class="footer-nav__sublist">
+              <li class="footer-nav__sublist-item">
+                <a href="#">Отследить заказ</a>
+              </li>
+              <li class="footer-nav__sublist-item">
+                <a href="#">Доставка и возвраты</a>
+              </li>
+              <li class="footer-nav__sublist-item">
+                <a href="#">10% скидка для студентов</a>
+              </li>
+            </ul>
           </li>
-          <li class="page-nav__item">
-            <a href="#" class="page-nav__link">Помощь</a>
+          <li class="footer-nav__item">
+            <h3 class="footer-nav__heading">
+              <a href="#" class="footer-nav__link">Покупателям</a>
+            </h3>
+            <ul class="footer-nav__sublist">
+              <li class="footer-nav__sublist-item">
+                <a href="#">Помощь</a>
+              </li>
+              <li class="footer-nav__sublist-item">
+                <a href="#">Как сделать заказ</a>
+              </li>
+              <li class="footer-nav__sublist-item">
+                <a href="#">Способы оплаты</a>
+              </li>
+              <li class="footer-nav__sublist-item">
+                <a href="#">Доставка</a>
+              </li>
+            </ul>
           </li>
-          <li class="page-nav__item">
-            <a href="#" class="page-nav__link">О нас</a>
+          <li class="footer-nav__item">
+            <h3 class="footer-nav__heading">
+              <a href="#" class="footer-nav__link">Промокоды</a>
+            </h3>
+            <ul class="footer-nav__sublist">
+              <li class="footer-nav__sublist-item">
+                <a href="#">Возврат денежных средств</a>
+              </li>
+              <li class="footer-nav__sublist-item">
+                <a href="#">Правила продажи</a>
+              </li>
+              <li class="footer-nav__sublist-item">
+                <a href="#">Правила пользования торговой площадкой</a>
+              </li>
+              <li class="footer-nav__sublist-item">
+                <a href="#">Вопросы и ответы</a>
+              </li>
+            </ul>
           </li>
-          <li class="page-nav__item">
-            <a href="#" class="page-nav__link">Контакты</a>
+          <li class="footer-nav__item">
+            <h3 class="footer-nav__heading">
+              <a href="#" class="footer-nav__link">Скидки</a>
+            </h3>
+            <ul class="footer-nav__sublist">
+              <li class="footer-nav__sublist-item">
+                <a href="#">Помощь</a>
+              </li>
+              <li class="footer-nav__sublist-item">
+                <a href="#">Как сделать заказ</a>
+              </li>
+              <li class="footer-nav__sublist-item">
+                <a href="#">Способы оплаты</a>
+              </li>
+              <li class="footer-nav__sublist-item">
+                <a href="#">Доставка</a>
+              </li>
+            </ul>
           </li>
         </ul>
       </div>
-    </div>
-    <div class="footer__group footer__group--info">
       <div class="footer__contacts contacts">
         <div class="contacts__item">
           <a href="tel:+79525525252" class="contacts__link">
@@ -52,7 +124,7 @@
           </div>
         </div>
         <div class="contacts__item contacts__item--work-schedule">
-          <span class="contacts__text">Время работы: с 9:00 до 20:00 по мск</span>
+          <span class="contacts__text">Время работы: с 9:00 до 20:00</span>
         </div>
         <div class="contacts__item">
           <a href="mailto:mr.driskell@mail.ru?subject=вопрос" class="contacts__link">
@@ -62,14 +134,16 @@
         </div>
       </div>
     </div>
-    <div class="footer__bottom">
+  </div>
+  <div class="footer__bottom">
+    <div class="footer__bottom-inner">
+      <span class="footer__copyright">© ООО «Mr.Driskell», 2013-2022</span>
       <span class="footer__bottom-links">
         <a href="#">Политика конфиденциальности</a>
         <a href="#">Правила и условия</a>
         <a href="#">Лицензия</a>
         <a href="#">Публичная оферта</a>
       </span>
-      <span class="footer__copyright">© ООО «Mr.Driskell», 2013-2022</span>
     </div>
   </div>
 </footer>
