--- a/#src/_footer.html
+++ b/#src/_footer.html
@@ -99,37 +99,32 @@
           </li>
         </ul>
       </div>
-      <div class="footer__contacts contacts">
-        <div class="contacts__item">
-          <a href="tel:+79525525252" class="contacts__link">
-            <span class="contacts__icon contacts__icon--phone"></span>
-            <span class="contacts__text">+7 952 552-52-52</span>
+      <div class="footer__contacts contacts-info">
+        <div class="contacts-info__item">
+          <a href="tel:+79525525252" class="contacts-info__link contacts-info__link--phone">
+            +7 952 552-52-52
           </a>
         </div>
-        <div class="contacts__item contacts__item--socials socials">
-          <div class="socials__item">
-            <a href="#" class="socials__link">
-              <span class="socials__icon socials__icon--viber"></span>
-            </a>
-          </div>
-          <div class="socials__item">
-            <a href="#" class="socials__link">
-              <span class="socials__icon socials__icon--whatsapp"></span>
-            </a>
-          </div>
-          <div class="socials__item">
-            <a href="#" class="socials__link">
-              <span class="socials__icon socials__icon--telegram"></span>
-            </a>
-          </div>
+        <div class="contacts-info__item contacts-info__item--socials socials socials--has-icon">
+          <a href="#" class="socials__link socials__link--viber">
+            <span class="vis-hid">Viber</span>
+          </a>
+          <a href="#" class="socials__link socials__link--whatsapp">
+            <span class="vis-hid">Whatsapp</span>
+          </a>
+          <a href="#" class="socials__link socials__link--telegram">
+            <span class="vis-hid">Telegram</span>
+          </a>
         </div>
-        <div class="contacts__item contacts__item--work-schedule">
-          <span class="contacts__text">Время работы: с 9:00 до 20:00</span>
+        <div class="contacts-info__item contacts-info__item--work-schedule">
+          Время работы: с 9:00 до 20:00
         </div>
-        <div class="contacts__item">
-          <a href="mailto:mr.driskell@mail.ru?subject=вопрос" class="contacts__link">
-            <span class="contacts__icon contacts__icon--mail"></span>
-            <span class="contacts__text">Mr.Driskell@mail.ru</span>
+        <div class="contacts-info__item">
+          <a
+            href="mailto:mr.driskell@mail.ru?subject=вопрос"
+            class="contacts-info__link contacts-info__link--mail"
+          >
+            Mr.Driskell@mail.ru
           </a>
         </div>
       </div>
@@ -138,12 +133,20 @@
   <div class="footer__bottom">
     <div class="footer__bottom-inner">
       <span class="footer__copyright">© ООО «Mr.Driskell», 2013-2022</span>
-      <span class="footer__bottom-links">
-        <a href="#">Политика конфиденциальности</a>
-        <a href="#">Правила и условия</a>
-        <a href="#">Лицензия</a>
-        <a href="#">Публичная оферта</a>
-      </span>
+      <ul class="footer__bottom-links">
+        <li>
+          <a href="#">Политика конфиденциальности</a>
+        </li>
+        <li>
+          <a href="#">Правила и условия</a>
+        </li>
+        <li>
+          <a href="#">Лицензия</a>
+        </li>
+        <li>
+          <a href="#">Публичная оферта</a>
+        </li>
+      </ul>
     </div>
   </div>
 </footer>
