--- a/#src/_header.html
+++ b/#src/_header.html
@@ -1,38 +1,17 @@
 <header class="header">
   <div class="header__inner">
     <div class="header__top">
-      <div class="header__contacts contacts">
-        <div class="contacts__item">
-          <a href="#" class="contacts__link">
-            <span class="contacts__icon contacts__icon--phone"></span>
-            <span class="contacts__text">+7 952 552-52-52</span>
-          </a>
+      <div class="header__contacts contacts-info">
+        <div class="contacts-info__item">
+          <a href="#" class="contacts-info__link contacts-info__link--phone">+7 952 552-52-52</a>
         </div>
-        <div class="contacts__item">
-          <a href="#" class="contacts__link">
-            <span class="contacts__icon contacts__icon--mail"></span>
-            <span class="contacts__text">Mr.Driskell@mail.ru</span>
-          </a>
+        <div class="contacts-info__item">
+          <a href="#" class="contacts-info__link contacts-info__link--mail">Mr.Driskell@mail.ru</a>
         </div>
-        <div class="contacts__item contacts__item--socials socials">
-          <div class="socials__item">
-            <a href="#" class="socials__link">
-              <!-- <span class="socials__icon socials__icon--viber"></span> -->
-              <span class="socials__link-text">Viber</span>
-            </a>
-          </div>
-          <div class="socials__item">
-            <a href="#" class="socials__link">
-              <!-- <span class="socials__icon socials__icon--whatsapp"></span> -->
-              <span class="socials__link-text">Whats App</span>
-            </a>
-          </div>
-          <div class="socials__item">
-            <a href="#" class="socials__link">
-              <!-- <span class="socials__icon socials__icon--telegram"></span> -->
-              <span class="socials__link-text">Telegramm</span>
-            </a>
-          </div>
+        <div class="contacts-info__item contacts-info__item--socials socials">
+          <a href="#" class="socials__link">Viber</a>
+          <a href="#" class="socials__link">Whats App</a>
+          <a href="#" class="socials__link">Telegramm</a>
         </div>
       </div>
       <button class="header__dropdown-button">
@@ -415,37 +394,32 @@
             <a class="search__extended-search-link"></a>
           </div>
         </form>
-        <div class="dropdown-menu__contacts contacts">
-          <div class="contacts__item">
-            <a href="tel:+79525525252" class="contacts__link">
-              <span class="contacts__icon contacts__icon--phone"></span>
-              <span class="contacts__text">+7 952 552-52-52</span>
+        <div class="dropdown-menu__contacts contacts-info">
+          <div class="contacts-info__item">
+            <a href="tel:+79525525252" class="contacts-info__link contacts-info__link--phone">
+              +7 952 552-52-52
             </a>
           </div>
-          <div class="contacts__item contacts__item--socials socials">
-            <div class="socials__item">
-              <a href="#" class="socials__link">
-                <span class="socials__icon socials__icon--viber"></span>
-              </a>
-            </div>
-            <div class="socials__item">
-              <a href="#" class="socials__link">
-                <span class="socials__icon socials__icon--whatsapp"></span>
-              </a>
-            </div>
-            <div class="socials__item">
-              <a href="#" class="socials__link">
-                <span class="socials__icon socials__icon--telegram"></span>
-              </a>
-            </div>
+          <div class="contacts-info__item contacts-info__item--socials socials socials--has-icon">
+            <a href="#" class="socials__link socials__link--viber">
+              <span class="vis-hid">Viber</span>
+            </a>
+            <a href="#" class="socials__link socials__link--whatsapp">
+              <span class="vis-hid">Whatsapp</span>
+            </a>
+            <a href="#" class="socials__link socials__link--telegram">
+              <span class="vis-hid">Telegram</span>
+            </a>
           </div>
-          <div class="contacts__item contacts__item--work-schedule">
-            <span class="contacts__text contacts__text">Время работы: с 9:00 до 20:00 по мск</span>
+          <div class="contacts-info__item contacts-info__item--work-schedule">
+            Время работы: с 9:00 до 20:00 по мск
           </div>
-          <div class="contacts__item">
-            <a href="mailto:mr.driskell@mail.ru?subject=вопрос" class="contacts__link">
-              <span class="contacts__icon contacts__icon--mail"></span>
-              <span class="contacts__text">Mr.Driskell@mail.ru</span>
+          <div class="contacts-info__item">
+            <a
+              href="mailto:mr.driskell@mail.ru?subject=вопрос"
+              class="contacts-info__link contacts-info__link--mail"
+            >
+              Mr.Driskell@mail.ru
             </a>
           </div>
         </div>
